--- a/DesigningAPIs/ProductsApi/appsettings.json
+++ b/DesigningAPIs/ProductsApi/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "StocksApi": {
+    "BaseUrl": "https://localhost:7221/api/stocks"
+  },
   "AllowedHosts": "*"
 }
